changed debug to false

--- a/rollindustries/templates/rollindustries/index.html
+++ b/rollindustries/templates/rollindustries/index.html
@@ -50,7 +50,7 @@
                         <p class="text-white-75 mb-5">At Roll Industries we understand how important your business is to you. 
                         So focus on the important stuff, let us make sure you run smoothly.</p>
                         <a class="btn btn-primary btn-xl" href="#services">Find Out More</a>
-                        <a style="margin: 5px; background: aqua;" class="btn btn-primary btn-xl" href="{% url 'origin' %}">Oringin Mode</a>
+                        <a style="margin: 5px; background: aqua;" class="btn btn-primary btn-xl" href="{% url 'origin' %}">Origin Mode</a>
                     </div>
                 </div>
             </div>
