changed the phone number field to be required

--- a/rollindustries/templates/rollindustries/index.html
+++ b/rollindustries/templates/rollindustries/index.html
@@ -200,7 +200,7 @@
                             </div>
                             <!-- Phone number input-->
                             <div class="form-floating mb-3">
-                                <input name="phone" class="form-control" id="Phone" type="tel" placeholder="+254 712-345-678"/>
+                                <input name="phone" class="form-control" id="Phone" type="tel" placeholder="+254 712-345-678" required/>
                                 <label for="phone">Phone number</label>
                             </div>
                             <!-- Message input-->
