--- a/rollindustries/templates/rollindustries/index.html
+++ b/rollindustries/templates/rollindustries/index.html
@@ -33,7 +33,7 @@
                         <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
                         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'error' %}">Blog</a></li>
+                        <li class="nav-item"><a class="nav-link" href="https://rollindustries-blog.herokuapp.com/">Blog</a></li>
                     </ul>
                 </div>
             </div>
@@ -157,8 +157,8 @@
         <section class="page-section bg-dark text-white">
             <div class="container px-4 px-lg-5 text-center">
                 <h2 class="mb-4">Login or Sign-up</h2>
-                <a class="btn btn-light btn-xl" href="{% url 'error' %}">Sign-Up</a>
-                <a class="btn btn-dark btn-xl" href="{% url 'error' %}">Login</a>
+                <a class="btn btn-light btn-xl" href="https://rollindustries-blog.herokuapp.com/accounts/register/">Sign-Up</a>
+                <a class="btn btn-dark btn-xl" href="https://rollindustries-blog.herokuapp.com/accounts/login/">Login</a>
             </div>
         </section>
          <!-- About-->
