--- a/rollindustries/templates/rollindustries/index.html
+++ b/rollindustries/templates/rollindustries/index.html
@@ -156,7 +156,9 @@
         <!-- Call to action-->
         <section class="page-section bg-dark text-white">
             <div class="container px-4 px-lg-5 text-center">
-                <h2 class="mb-4">Login or Sign-up</h2>
+                <h2 class="text-white mt-0">Become part of our ever growing Community.</h2>
+                <hr class="divider divider-light" />
+                <h3 class="mb-4">Login or Sign-up</h2>
                 <a class="btn btn-light btn-xl" href="{% url 'error' %}">Sign-Up</a>
                 <a class="btn btn-dark btn-xl" href="{% url 'error' %}">Login</a>
             </div>
