--- a/rollindustries/templates/rollindustries/index.html
+++ b/rollindustries/templates/rollindustries/index.html
@@ -156,6 +156,8 @@
         <!-- Call to action-->
         <section class="page-section bg-dark text-white">
             <div class="container px-4 px-lg-5 text-center">
+                <h2 class="text-white mt-0">Be Part of Our growing community</h2>
+                <hr class="divider divider-light" />
                 <h2 class="mb-4">Login or Sign-up</h2>
                 <a class="btn btn-light btn-xl" href="https://rollindustries-blog.herokuapp.com/accounts/register/" target="_blank">Sign-Up</a>
                 <a class="btn btn-dark btn-xl" href="https://rollindustries-blog.herokuapp.com/accounts/login/" target="_blank">Login</a>
